🐛 Fix featured images overlap page title when metadata hidden
Fixes: #827

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1903,12 +1903,12 @@ code {
   margin-top: -0.75rem;
 }
 
-.-mt-4 {
-  margin-top: -1rem;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-12 {
@@ -1925,6 +1925,10 @@ code {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .mb-\[2px\] {
